upgrade Base64Util